Refactor and Code Tidy