@@ -8,7 +8,6 @@ import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -16,11 +15,10 @@ import java.util.List;
  */
 public class GuildStoresCommandHandler extends GuildMemberBonusCommandHandler {
 
-    private Inventory openInventory(Player player, int rows, String displayName) {
+    private void openInventory(Player player, int rows, String displayName) {
         Inventory inventory = Bukkit.createInventory(player, rows * 9, displayName);
         player.openInventory(inventory);
         GuildStoreListener.OPEN_STORES.add(player.getUniqueId());
-        return inventory;
     }
 
     @Override
@@ -35,7 +33,7 @@ public class GuildStoresCommandHandler extends GuildMemberBonusCommandHandler {
 
     @Override
     public List<String> getKeywords() {
-        return Arrays.asList("stores");
+        return List.of("stores");
     }
 
     @Override
